ブレークポイントファイルを無視ファイルに追加

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ testSocialFramework/testSocialFramework.xcodeproj/project.xcworkspace/contents.x
 testSocialFramework/testSocialFramework.xcodeproj/project.xcworkspace/xcuserdata/nakano_michiharu.xcuserdatad/UserInterfaceState.xcuserstate
 testSocialFramework/testSocialFramework.xcodeproj/xcuserdata/nakano_michiharu.xcuserdatad/xcschemes/testSocialFramework.xcscheme
 testSocialFramework/testSocialFramework.xcodeproj/xcuserdata/nakano_michiharu.xcuserdatad/xcschemes/xcschememanagement.plist
+Breakpoints.xcbkptlist
