Twitter APIの変更に伴う修正

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ testSocialFramework/testSocialFramework.xcodeproj/project.xcworkspace/xcuserdata
 testSocialFramework/testSocialFramework.xcodeproj/xcuserdata/nakano_michiharu.xcuserdatad/xcschemes/testSocialFramework.xcscheme
 testSocialFramework/testSocialFramework.xcodeproj/xcuserdata/nakano_michiharu.xcuserdatad/xcschemes/xcschememanagement.plist
 Breakpoints.xcbkptlist
+testSocialFramework/testSocialFramework.xcodeproj/project.xcworkspace/xcshareddata
